[package]
name = "lokloob"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.4", features = ["derive", "env"] }
reqwest = { version = "0.11.18", default-features = false, features = ["blocking", "json", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["fs"] }

[dev-dependencies]
tempfile = "3.6.0"
portpicker = "0.1.1"
json = "0.12.4"
mdbook-plantuml = "0.8.0"
